--- a/css/default.css
+++ b/css/default.css
@@ -13,8 +13,7 @@ header, article, nav, footer {
 
 @media screen and (min-width: 800px) {
 	header, article, nav, footer {
-		max-width: 960px;
-		min-width: 400px;
+		max-width: 48rem;
 	}
 }
 
